# applicants-parser

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  test.py  urls.txt
rabbitmq/: .erlang.cookie
rabbitmq/mnesia/rabbit@rabbitmq/: rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
src/: app.py  broker.py  constants.py  dependencies.py  schemas.py  settings.py  utils.py
src/agent/: dependencies.py  nodes.py  prompts.py  states.py  toolkit.py  utils.py
src/applicant_eye/: utils.py
src/applicant_eye/agent/: nodes.py  utils.py  workflow.py
src/applicant_eye/agent/toolkit/: __init__.py  toolkit.py  tools.py
src/applicants_parser/: constants.py  dependencies.py  settings.py  utils.py
src/applicants_parser/agent/: dependencies.py  nodes.py  prompts.py  states.py  toolkit.py  tools.py  workflow.py
src/applicants_parser/browser/: __init__.py  helpers.py  state.py  tool.py  utils.py
src/applicants_parser/core/: enums.py  schemas.py
src/browser/: helpers.py  tool.py  utils.py
src/core/: __init__.py  base.py  enums.py  schemas.py
src/database/: __init__.py  database_configs.py  models.py  schemas.py  session.py
src/gosuslugi/: constants.py  decorators.py  graphs.py  helpers.py  nodes.py  selectors.py  states.py  test.py  utils.py  validators.py
src/migrations/: env.py
src/migrations/versions/: 2025_07_29_0109-f6328740ca30_add_tables.py
(+14 files in other folders)
