[project]
name = "applicanteye"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "browser-use>=0.5.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-gigachat>=0.3.11",
    "langgraph>=0.5.2",
    "mypy>=1.17.0",
    "playwright>=1.53.0",
    "ruff>=0.12.4",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.41",
]
# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "__samples__",
    ".venv"
]